--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ streamlit>=1.45.1
 requests>=2.31.0
 langgraph>=0.3.1
 langchain>=0.3.1
+langchain-core
+langchain-community
 openai
 # sqlite3
 python-dotenv
@@ -12,3 +14,4 @@ pydub
 fpdf2>=2.7.0
 Pillow>=10.0.0
 pandas>=2.0.0
+Flask>=3.0.0
